manifests/emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydata
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: shared-storage
      mountPath: /data/shared
  volumes:
  - name: shared-storage
    emptyDir: {}
