manifests/hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: localpath
      mountPath: /data/shared
  volumes:
  - name: localpath
    hostPath:
      path: /tmp
      type: Directory
