manifests/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx # deprecated
    spec.ingressClassName: nginx
spec:
  rules:
  - http:
      paths:
      - path: /tea # /tea URL 요청시 tea-svc로 연결
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee # /coffee URL 요청시 coffee-svc로 연결
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
